Fix review issues: Jakarta table, Maven JVM flags, Strategy C, Lombok note
- Add Jakarta rows to annotation mapping table (were handled by OpenRewrite
  but missing from the reference table)
- Fix enforcement.md: Maven compiler plugin uses <release> not <source>/<target>;
  split Gradle/Maven JVM flags note — Maven does not auto-add them, add
  .mvn/jvm.config block; add version timestamps; add Gradle plugins{} comment
- Rewrite Strategy C in incremental-adoption.md: old version incorrectly implied
  @NullMarked propagates to sub-packages (it does not); new version is accurate
- Expand Lombok row with dual-layer explanation and cross-link to keep criteria
- Update IntelliJ inspection path for finding requireNonNull candidates

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

Signed-off-by: Aditya Parikh <adityaparikh@gmail.com>
Signed-off-by: adityamparikh <aditya.m.parikh@gmail.com>